--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "babel-preset-react": "^6.3.13",
     "body-parser": "^1.14.2",
     "express": "^4.13.3",
+    "jquery": "^1.11.3",
+    "marked": "^0.3.5",
     "react": "^0.14.3",
     "react-dom": "^0.14.3"
   },
